force-app/main/default/objects/Trigger__c/fields/Occupation__c.field-meta.xml
<CustomField>
    <fullName>Occupation__c</fullName>
    <label>Occupation</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Class__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Teacher</fullName>
            </value>
            <value>
                <fullName>Data Scientist</fullName>
            </value>
            <value>
                <fullName>Mathematician</fullName>
            </value>
            <value>
                <fullName>Hindi Teacher</fullName>
            </value>
            <value>
                <fullName>Doctor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>