force-app/main/default/objects/Trigger__c/validationRules/Phone_Verification.validationRule-meta.xml
<ValidationRule>
    <fullName>Phone_Verification</fullName>
    <active>true</active>
    <errorConditionFormula>(LEN( Phone_Number__c ) &lt;&gt;10)</errorConditionFormula>
    <errorDisplayField>Phone_Number__c</errorDisplayField>
    <errorMessage>The Phone number is not Valid.</errorMessage>
</ValidationRule>